--- a/src/main/java/info/liangliang/setting/ui/TemplateEditPane.form
+++ b/src/main/java/info/liangliang/setting/ui/TemplateEditPane.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.setting.ui.TemplateEditPane">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="info.liangliang.setting.ui.TemplateEditPane">
   <grid id="27dc6" binding="mainPenel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -26,7 +26,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Personalize your git commit types and templates ."/>
+              <text value="自定义提交类型与模板"/>
               <verticalAlignment value="1"/>
             </properties>
           </component>
@@ -75,7 +75,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="template  explain"/>
+                      <text value="模板释义"/>
                     </properties>
                   </component>
                   <grid id="6e7a2" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
